# FilePrompt

./: LICENSE  README  fileprompt.cabal
XMonad/Prompt/: FilePrompt.hs
